<!--
  ~    ™T©ReMeTaL Signs A-Z.
  ~    Copyright (C) 2025 ™T©ReMeTaL.
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~
  ~    You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~   ************************************************************************
  ~     strings.xml : Copyright (c) 2025 ™T©ReMeTaL.
  ~   ************************************************************************
  ~      Computer Scientist: David Rick (™T©ReMeTaL)
  ~      Date: 10/11/25, 4:10 AM
  ~      Program Name: signs.main
  ~      File: strings.xml
  ~      Last Modified: 8/9/24, 4:08 AM
  ~   ************************************************************************
  -->
<!--<font color='#FBC02D'>+</font>-->
<resources>
    <string name="app_name">Signs <font color='#004A9F'>A</font>-<font color='#D32F2F'>Z</font></string>
    <string name="copyright">©%s™T©ReMeTaL</string>
    <string name="nav_header_subtitle">™T©ReMeTaL</string>
    <string name="nav_header_subtitle_address">toremetal.com</string>
    <string name="nav_header_subtitle_bottom">american sign language</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="version_display_name">Version: %s</string>
    <string name="menu_about">About</string>
    <string name="menu_numbers">Numbers</string>
    <string name="trademark" translatable="false">™T©ReMeTaL</string>
    <string name="website" translatable="false">https://toremetal.com</string>
    <string name="playStoreLink" translatable="false">https://play.google.com/store/apps/dev?id=7952290850776080706</string>
    <string name="feedbackLink" translatable="false">https://docs.google.com/forms/d/e/1FAIpQLSehnNjRaVJgdFEXJWLdtTezfps_rReJFK3KobJdSfgNZf2OFw/viewform</string>
    <string name="detail_prefix">Sign </string>
    <string name="licenseLink" translatable="false">https://www.toremetal.com/android/signs/</string>
    <string name="subLink" translatable="false">https://toremetal.com/signs</string>
    <string name="searchPrefix" translatable="false">https://www.google.com/images?q=Sign Language: %s</string>
    <string name="buttonText">Web Search</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacyPolicyLink">https://toremetal.github.io/privacypolicy/m/</string>
    <string name="play">Google Play™</string>
    <string name="status">status</string>
    <string name="searchHint">Enter text in the search box</string>
    <string name="updateComplete">The update has finished downloading.</string>
    <string name="restart">RESTART</string>
    <string name="words">Words</string>
    <string name="online">Signs (Online)</string>
    <string name="feedback">📝 feedback</string>
    <string name="public_image_library">Online Library</string>
    <string name="custom_image_library">Subscription</string>


    <string name="save_custom_image">Save Image</string>
    <!-- Preference Titles -->
    <!--<string name="messages_header">Account</string>
    <string name="sync_header">Account Sign-in</string>-->

    <!-- Account Preferences -->
    <!--<string name="signature_title">Email</string>
    <string name="reply_title">Reset Password</string>-->

    <!-- Sign-in Preferences -->
    <string name="sign_in_settings">⚙️ Settings</string>
    <!--<string name="attachment_title">Sign-in</string>
    <string name="attachment_summary_on">Sign in to Subscription</string>
    <string name="attachment_summary_off">Don\'t Sign in to Subscription</string>-->
    <string name="enter_the_name_for_the_image">Enter the Name for the Image</string>
    <string name="image_name">Image Name</string>
    <string name="enter_the_link_to_the_image">Enter the link to the Image</string>
    <string name="image_link">Image Link</string>
    <string name="preview_image">Preview Image</string>
    <string name="submit_image">Submit Image</string>
    <!--<string name="loggedOut">(Logged Out)</string>
    <string name="loggedIn">(Logged In)</string>-->
    <string name="searchButtonContentDescription">Search the web for the text entered</string>
    <string name="translator">Translator</string>
    <string name="float_button_hand_description">Translate txt to letter Signs</string>
    <string name="text_box_hint_translate">text 2 translate</string>
    <string name="clear_all">Clear All</string>
    <string name="delete_last_letter">Delete last letter</string>
    <string name="add_a_space">Add a space</string>
    <string name="https">https://</string>
    <string name="enterImageName">Please Enter Image Name First</string>
    <string name="enterImageLink">Please Enter Image Link First</string>
    <!--<string name="editorLogInTitle">Log in/out in the editor.</string>-->
</resources>