<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    ™T©ReMeTaL Signs A-Z.
  ~    Copyright (C) 2025 ™T©ReMeTaL.
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~
  ~    You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~   ************************************************************************
  ~     bottom_navigation.xml : Copyright (c) 2025 ™T©ReMeTaL.
  ~   ************************************************************************
  ~      Computer Scientist: David Rick (™T©ReMeTaL)
  ~      Date: 10/11/25, 4:10 AM
  ~      Program Name: signs.main
  ~      File: bottom_navigation.xml
  ~      Last Modified: 8/7/24, 11:51 PM
  ~   ************************************************************************
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_abc"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_numbers"
            android:icon="@drawable/ic_123"
            android:title="@string/menu_numbers" />
        <item
            android:id="@+id/nav_words"
            android:icon="@drawable/ic_words"
            android:title="@string/words" />
    </group>
</menu>