<?xml version="1.0" encoding="utf-8"?><!--
  ~    ™T©ReMeTaL Signs A-Z.
  ~    Copyright (C) 2025 ™T©ReMeTaL.
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~
  ~    You may obtain a copy of the License at
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~   ************************************************************************
  ~     nav_header_main.xml : Copyright (c) 2025 ™T©ReMeTaL.
  ~   ************************************************************************
  ~      Computer Scientist: David Rick (™T©ReMeTaL)
  ~      Date: 10/11/25, 4:10 AM
  ~      Program Name: signs.main
  ~      File: nav_header_main.xml
  ~      Last Modified: 8/7/24, 11:51 PM
  ~   ************************************************************************
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:fitsSystemWindows="true"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:ignore="UnusedIds">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:contentDescription="@string/nav_header_desc"
        android:cropToPadding="true"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:padding="0dp"
        android:shadowColor="#1DE9B6"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/nav_header_subtitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:shadowColor="#000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/MenuTmAddress"
        style="@android:style/Widget.Material.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:alpha="0.8"
        android:autoLink="web"
        android:padding="0dp"
        android:shadowColor="#1DE9B6"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="@string/nav_header_subtitle_bottom"
        android:textColorLink="#B4FF1744" />
</LinearLayout>